--- a/client/src/components/ExperimentCard/ExperimentCard.css
+++ b/client/src/components/ExperimentCard/ExperimentCard.css
@@ -11,11 +11,6 @@
   overflow: hidden;
 }
 
-/* .exp-card-wrap:focus {
-  outline: 1px solid lightblue;
-  outline-offset: -2px;
-} */
-
 @media (width > 600px) {
   .exp-card-wrap {
     width: 350px;
@@ -36,14 +31,14 @@
   width: 100%;
   height: 100%;
   display: flex;
-  /* align-items: center; */
   justify-content: center;
 }
 
 .exp-card-video {
   width: 100%;
-  /* outline: 1px solid var(--gray-4); */
   border-radius: 8px;
+  pointer-events: none;
+  user-select: none;
 }
 
 .exp-card-title {
