--- a/client/src/components/ExperimentCard/ExperimentCard.css
+++ b/client/src/components/ExperimentCard/ExperimentCard.css
@@ -1,14 +1,14 @@
 .exp-card-wrap {
   color: white;
   width: 290px;
-  height: 340px;
+  height: 360px;
   background-color: var(--gray-1);
   margin-right: var(--gap-xs);
-  padding: var(--gap-md);
   border-radius: var(--gap-xs);
   scroll-snap-align: start;
   position: relative;
   overflow: hidden;
+  padding: var(--gap-md) 0;
 }
 
 @media (width > 600px) {
@@ -20,11 +20,20 @@
 
 .exp-card-info-wrap {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  inset: 0;
+  z-index: 10;
   width: 100%;
   padding: var(--gap-md);
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), var(--gray-1));
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  user-select: none;
+  pointer-events: none;
+  background-image: linear-gradient(
+    to bottom,
+    transparent 70%,
+    var(--gray-1) 90%
+  );
 }
 
 .exp-card-content {
@@ -39,6 +48,8 @@
   border-radius: 8px;
   pointer-events: none;
   user-select: none;
+  position: relative;
+  /* position: absolute; */
 }
 
 .exp-card-title {
