--- a/client/src/components/ExperimentCard/ExperimentCard.css
+++ b/client/src/components/ExperimentCard/ExperimentCard.css
@@ -1,14 +1,14 @@
 .exp-card-wrap {
   color: white;
   width: 290px;
-  height: 360px;
+  height: 400px;
   background-color: var(--gray-1);
   margin-right: var(--gap-xs);
   border-radius: var(--gap-xs);
   scroll-snap-align: start;
   position: relative;
   overflow: hidden;
-  padding: var(--gap-md) 0;
+  /* padding: var(--gap-md) 0; */
 }
 
 @media (width > 600px) {
@@ -49,7 +49,6 @@
   pointer-events: none;
   user-select: none;
   position: relative;
-  /* position: absolute; */
 }
 
 .exp-card-title {
