--- a/client/src/pages/Experiments/VercelFeebbackPage/VercelFeebbackPage.css
+++ b/client/src/pages/Experiments/VercelFeebbackPage/VercelFeebbackPage.css
@@ -14,3 +14,10 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 600px) {
+  .vf-demo-wrap {
+    background-color: transparent;
+    outline: none;
+  }
+}
