--- a/client/src/components/ExperimentSlider/ExperimentSlider.css
+++ b/client/src/components/ExperimentSlider/ExperimentSlider.css
@@ -6,6 +6,7 @@
   margin-right: 10px;
   scroll-snap-type: x mandatory;
   scroll-padding-left: 20px;
+  padding-bottom: 20px;
 }
 
 .exp-slider-inner {
