--- a/client/src/pages/Experiments/AppleNotesMenuPage/AppleNotesMenuPage.css
+++ b/client/src/pages/Experiments/AppleNotesMenuPage/AppleNotesMenuPage.css
@@ -13,6 +13,7 @@
   align-items: center;
   justify-content: center;
   padding: var(--gap-xl) 0;
+  margin-bottom: var(--gap-xxl);
 }
 
 @media (width < 550px) {
