--- a/client/src/pages/Experiments/VercelFeebbackPage/VercelFeebbackPage.css
+++ b/client/src/pages/Experiments/VercelFeebbackPage/VercelFeebbackPage.css
@@ -13,6 +13,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+.demo-trigger {
+  position: fixed;
+  bottom: var(--gap-md);
+  z-index: 10000000;
 }
 
 @media (max-width: 600px) {
