--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,3 +38,25 @@
   margin-bottom: var(--gap-md);
   color: var(--gray-11);
 }
+
+.page-content > p > code {
+  background-color: var(--gray-2);
+  padding: 0px 3.6px;
+  font-size: 16px;
+  outline: 1px solid var(--gray-3);
+  border-radius: 2px;
+  font-family: monospace;
+}
+
+.page-content > p > span {
+  font-weight: 500;
+}
+
+.inline-links {
+  border-bottom: 1px dashed var(--gray-5);
+  padding-bottom: 2px;
+}
+
+.inline-links:focus {
+  border-bottom: 1px dashed lightblue;
+}
