--- a/client/src/components/DemoPopover/DemoPopover.css
+++ b/client/src/components/DemoPopover/DemoPopover.css
@@ -1,14 +1,14 @@
 .demo-popover-trigger {
-  background-color: var(--gray-2);
-  color: var(--gray-12);
+  background-color: var(--gray-12);
+  color: var(--gray-1);
   padding: 8px 16px;
-  outline: var(--outline);
+
   border-radius: 40px;
   border: none;
   cursor: pointer;
   text-shadow: var(--text-shadow);
-  font-size: 14px;
-  background-image: linear-gradient(180deg, var(--gray-2), #161616);
+  font-size: 16px;
+  background-image: linear-gradient(180deg, var(--gray-12), var(--gray-11));
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,6 +16,7 @@
   -webkit-box-shadow: -1px 1px 39px 16px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 1px 39px 16px rgba(0, 0, 0, 0.75);
   box-shadow: -1px 1px 39px 16px rgba(0, 0, 0, 0.75);
+  -webkit-tap-highlight-color: rgb(202, 221, 241);
 }
 
 .demo-popover-wrap {
