--- a/client/src/components/DemoPopover/DemoPopover.css
+++ b/client/src/components/DemoPopover/DemoPopover.css
@@ -40,11 +40,12 @@
 .demo-popover-content-wrap {
   position: absolute;
   z-index: 1000001 !important;
-  max-width: 90dvw;
+  max-width: 70dvw;
+  min-height: 400px;
   aspect-ratio: 1;
   bottom: var(--gap-md);
   outline: var(--outline);
-  max-height: 500px;
+  max-height: 90vh;
   width: calc(var(--page-max-width) - 40px);
 
   background-color: var(--gray-1);
@@ -54,12 +55,13 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  gap: var(--gap-md);
+
   overflow: hidden !important;
 }
 
 .demo-popover-video {
   width: 100%;
+  height: 100%;
   flex-grow: 1;
 
   display: flex;
@@ -69,8 +71,43 @@
 
 .demo-video {
   width: 100%;
+  height: 100%;
   max-width: 450px;
   border-radius: 8px;
   pointer-events: none;
   user-select: none;
+}
+
+.demo-popover-header-wrap {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.demo-popover-slider {
+  width: 60px;
+  height: 8px;
+  border-radius: 40px;
+  margin: 0 auto;
+  /* background-color: var(--gray-5); */
+  background-color: whitesmoke;
+  cursor: grabbing;
+}
+
+.demo-slider-cross {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  outline: none;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  color: white;
+  padding: 8px;
+}
+
+.demo-slider-cross:focus {
+  outline: 1px solid rgba(173, 216, 230, 0.468);
 }
