--- a/client/src/components/DemoPopover/DemoPopover.css
+++ b/client/src/components/DemoPopover/DemoPopover.css
@@ -40,22 +40,20 @@
 .demo-popover-content-wrap {
   position: absolute;
   z-index: 1000001 !important;
-  max-width: 70dvw;
-  min-height: 400px;
+  max-width: 90dvw;
   aspect-ratio: 1;
   bottom: var(--gap-md);
   outline: var(--outline);
-  max-height: 90vh;
-  width: calc(var(--page-max-width) - 40px);
+  max-height: 60vh;
+  width: calc(var(--page-max-width) - 20px);
 
   background-color: var(--gray-1);
   border-radius: var(--gap-md);
   padding: var(--gap-md);
-
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-
+  gap: var(--gap-md);
   overflow: hidden !important;
 }
 
@@ -72,7 +70,6 @@
 .demo-video {
   width: 100%;
   height: 100%;
-  max-width: 450px;
   border-radius: 8px;
   pointer-events: none;
   user-select: none;
