--- a/client/src/components/DemoPopover/DemoPopover.css
+++ b/client/src/components/DemoPopover/DemoPopover.css
@@ -80,6 +80,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 10px;
 }
 
 .demo-popover-slider {
@@ -89,6 +90,10 @@
   margin: 0 auto;
   background-color: var(--gray-5);
   cursor: grabbing;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .demo-slider-cross {
