--- a/client/src/pages/Experiments/InstagramOptionsPage/InstagramOptionsPage.css
+++ b/client/src/pages/Experiments/InstagramOptionsPage/InstagramOptionsPage.css
@@ -4,7 +4,7 @@
 
 .ig-demo-wrap {
   width: 100%;
-  padding: var(--gap-xl) 0;
+  /* padding: var(--gap-xl) 0; */
 
   background-color: var(--gray-1);
   outline: var(--outline);
