--- a/client/src/components/Experiments/InstagramOptions/InstagramOptions.css
+++ b/client/src/components/Experiments/InstagramOptions/InstagramOptions.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  --chat-bg: #0090ff;
 }
 
 .igo-chats {
@@ -15,6 +16,7 @@
   max-height: 700px;
   height: 100%;
   overflow: scroll;
+  padding: 10px 0px;
   position: relative;
 }
 
@@ -33,7 +35,8 @@
   padding: 8px;
   display: flex;
   align-items: center;
-  /* width: fit-content; */
+  color: #fff;
+  text-shadow: var(--text-shadow);
 }
 
 .igo-receiver-text {
@@ -50,12 +53,11 @@
 }
 
 .igo-sender-text > span {
-  background-color: var(--gray-3);
+  background-color: var(--gray-5);
 }
 
 .igo-receiver-text > span {
-  /* background-image: linear-gradient(180deg, #6e6ade, #5472e4); */
-  background-color: #3b9eff;
+  background-color: var(--chat-bg);
 }
 
 .igo-sender-text + .igo-receiver-text,
@@ -89,11 +91,12 @@
   display: flex;
   align-items: center;
   width: fit-content;
+  text-shadow: var(--text-shadow);
 }
 
 .ig-emojis-wrap {
   height: 60px;
-  background-color: var(--gray-4);
+  background-color: var(--gray-5);
   z-index: 1000;
   position: fixed;
   border-radius: 100px;
