--- a/client/src/pages/Experiments/InstagramOptionsPage/InstagramOptionsPage.css
+++ b/client/src/pages/Experiments/InstagramOptionsPage/InstagramOptionsPage.css
@@ -4,7 +4,6 @@
 
 .ig-demo-wrap {
   width: 100%;
-  /* padding: var(--gap-xl) 0; */
 
   background-color: var(--gray-1);
   outline: var(--outline);
@@ -14,4 +13,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.igo-page-banner {
+  width: 100%;
+  padding: var(--gap-xl) 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
 }
