--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,11 +3,14 @@
   min-height: 100vh;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
   flex-direction: column;
   padding: 0px 16px;
   max-width: var(--page-max-width);
   margin: 0 auto;
+}
+
+.app::-webkit-scrollbar {
+  display: none;
 }
 
 .basic-text-muted {
