--- a/client/src/components/DemoPopover/DemoPopover.css
+++ b/client/src/components/DemoPopover/DemoPopover.css
@@ -44,7 +44,7 @@
   aspect-ratio: 1;
   bottom: var(--gap-md);
   outline: var(--outline);
-  max-height: 65vh;
+  max-height: 80vh;
   width: calc(var(--page-max-width) - 20px);
 
   background-color: var(--gray-1);
@@ -70,6 +70,7 @@
 .demo-video {
   width: 100%;
   height: 100%;
+  margin-bottom: var(--gap-xs);
   border-radius: 8px;
   pointer-events: none;
   user-select: none;
