--- a/client/src/components/DemoPopover/DemoPopover.css
+++ b/client/src/components/DemoPopover/DemoPopover.css
@@ -110,6 +110,6 @@
   padding: 8px;
 }
 
-.demo-slider-cross:focus {
+.demo-slider-cross:focus-visible {
   outline: 1px solid rgba(173, 216, 230, 0.468);
 }
