--- a/client/src/components/Experiments/Calendar/Calendar.css
+++ b/client/src/components/Experiments/Calendar/Calendar.css
@@ -3,6 +3,13 @@
   max-width: 400px;
   height: 500px;
   position: relative;
+
+  --ca-event-1: #d1e7c1;
+  --ca-event-1-dark: #8db672;
+  --ca-ev-1: linear-gradient(180deg, var(--ca-event-1), var(--ca-event-1-dark));
+  --ca-event-2: #ffe1ed;
+  --ca-event-2-dark: #be829b;
+  --ca-ev-2: linear-gradient(180deg, var(--ca-event-2), var(--ca-event-2-dark));
 }
 
 .ca-event-timeline {
@@ -58,46 +65,24 @@
 .ca-event-1,
 .ca-event-2 > p {
   text-shadow: var(--text-shadow);
-  font-weight: 500;
+  color: black;
   user-select: none;
+  font-weight: 500;
 }
 
 .ca-event-1 {
   top: 55px;
   height: 90px;
   width: calc(100% - 48px);
-  background-color: #e54d2e;
+
+  background-image: var(--ca-ev-1);
 }
 
 .ca-event-2 {
   top: 255px;
   height: 230px;
   width: calc(100% - 50px);
-  background-color: #e54666;
-}
-
-.ca-event-selected-wrap {
-  position: absolute;
-  inset: 0;
-  padding: var(--gap-xs);
-  overflow: hidden;
-  z-index: 1000;
-  text-shadow: var(--text-shadow);
-}
-
-.ca-selected-header > p {
-  text-shadow: var(--text-shadow);
-  font-weight: 500;
-  user-select: none;
-  font-size: 18px;
-  font-weight: 700;
-}
-
-.ca-selected-header {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  background-image: var(--ca-ev-2);
 }
 
 .ca-event-divider {
@@ -114,13 +99,84 @@
   justify-content: space-between;
 }
 
-/* .ca-event-calendar::before {
-  width: 8px;
-  height: 8px;
-  background-color: rgb(47, 0, 255);
+/* ---------------------------------------------------------------- */
+
+.ca-event-selected-wrap {
   position: absolute;
-  border-radius: 50%;
-  transform: translate(-12px, 7px);
-  content: "";
-  box-shadow: var(--text-shadow);
-} */
+  inset: 0;
+  padding: var(--gap-md);
+  overflow: hidden;
+  z-index: 1000;
+  color: var(--gray-3);
+  border-radius: var(--gap-xs);
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: var(--gap-md);
+}
+
+.ca-selected-action-tray {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ca-selected-action-tray-cancel-btn,
+.ca-selected-action-tray-mute-btn {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.ca-selected-action-tray-cancel-btn {
+  color: var(--error);
+}
+
+.ca-selected-action-tray-mute-btn {
+  color: var(--apple-sys-blue);
+}
+
+.ca-selected-header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ca-selected-header > p {
+  /* text-shadow: var(--text-shadow); */
+  user-select: none;
+  color: black;
+  font-weight: 600;
+}
+
+.ca-selected-event-details-wrap {
+  width: 100%;
+  background-color: #ddabc0;
+  border-radius: var(--gap-md);
+  padding: var(--gap-xs);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--gap-xs);
+  flex-direction: column;
+}
+
+.ca-selected-event-detail {
+  width: 100%;
+  background-color: var(--ca-event-2);
+  border-radius: var(--gap-xs);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ca-selected-avatars {
+  width: 100%;
+}
