Color fix radial menu

--- a/client/src/components/Experiments/RadialMenu/RadialMenu.css
+++ b/client/src/components/Experiments/RadialMenu/RadialMenu.css
@@ -28,7 +28,6 @@
   border: none;
   color: var(--gray-12);
 
-  color: rgb(44, 40, 40);
   width: 60px;
   aspect-ratio: 1;
   border-radius: 50%;
@@ -41,6 +40,7 @@
 }
 
 .rm-trigger {
+  /* color: rgb(44, 40, 40); */
   position: absolute;
   z-index: 10;
   will-change: background-image, background-color;
@@ -57,7 +57,8 @@
   position: absolute;
   z-index: 0;
   width: 58px !important;
-  background-image: linear-gradient(135deg, #bff6c3, #97c89a);
+  /* background-image: linear-gradient(135deg, #bff6c3, #97c89a); */
+  background-image: linear-gradient(180deg, #1994ff 0%, #157cff 100%);
 }
 
 .rm-options:focus-visible {
