--- a/client/src/pages/Experiments/WordModalPage/WordModalPage.css
+++ b/client/src/pages/Experiments/WordModalPage/WordModalPage.css
@@ -16,18 +16,18 @@
   outline: var(--outline);
 }
 
-.word-modal-demo > p {
+.word-modal-demo > div {
   line-height: 1.6;
   font-size: 16px;
   will-change: filter;
   transition: filter 0.3s ease-in;
 }
 
-/* .dictionary-wrap {
-  width: 100%;
-  height: 100%;
-} */
+.dictionary-wrap {
+  display: flex;
+  flex-direction: column;
+}
 
-/* .dictionary-usage {
+.dictionary-usage {
   white-space: pre-wrap;
-} */
+}
