Word Modal - final

--- a/client/src/components/Experiments/WordModal/WordModal.css
+++ b/client/src/components/Experiments/WordModal/WordModal.css
@@ -19,18 +19,19 @@
 .wm-modal {
   display: inline-block;
   position: absolute;
+  overflow: scroll;
   background-color: var(--gray-3);
   outline: 1px solid var(--gray-7);
   z-index: 999999999;
   padding: var(--gap-xs);
   border-radius: var(--gap-xs);
-  animation: scale 0.2s cubic-bezier(0.13, 0.83, 0.55, 1.14);
+  animation: word-modal-scale 0.2s cubic-bezier(0.13, 0.83, 0.55, 1.14);
   -webkit-box-shadow: -1px 1px 39px 16px rgba(0, 0, 0, 0.45);
   -moz-box-shadow: -1px 1px 39px 16px rgba(0, 0, 0, 0.45);
   box-shadow: -1px 1px 39px 16px rgba(0, 0, 0, 0.45);
 }
 
-@keyframes scale {
+@keyframes word-modal-scale {
   from {
     opacity: 0;
     scale: 0;
