--- a/client/src/pages/Experiments/WordModalPage/WordModalPage.css
+++ b/client/src/pages/Experiments/WordModalPage/WordModalPage.css
@@ -28,6 +28,40 @@
   flex-direction: column;
 }
 
-.dictionary-usage {
+.dictionary-wrap > p {
+  text-shadow: var(--text-shadow);
   white-space: pre-wrap;
+  line-height: 1.4;
+}
+
+.dictionary-details-bar {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  gap: var(--gap-xs);
+  padding-bottom: var(--gap-xs);
+  color: var(--gray-11);
+}
+
+.dictionary-type {
+  font-style: italic;
+}
+
+.dictionary-word {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.dictionary-meaning {
+  font-weight: 500;
+}
+
+.dictionary-usage {
+  font-size: 14px;
+  font-style: italic;
+  color: var(--gray-12);
+}
+
+.dictionary-meaning + .dictionary-usage {
+  padding-top: var(--gap-md);
 }
