--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,6 +16,12 @@
 .basic-text-muted {
   color: var(--gray-11);
 }
+
+.basic-text-muted {
+  font-size: 16px;
+  color: var(--gray-12);
+}
+
 .toast {
   background-color: var(--gray-2);
   outline: 1px solid var(--gray-5);
