--- a/client/src/components/ui/SliderGallery/SliderGallery.css
+++ b/client/src/components/ui/SliderGallery/SliderGallery.css
@@ -3,6 +3,7 @@
   /* overflow-x: scroll; */
   overflow: auto;
   overflow-y: hidden;
+
   --width: 300px;
 }
 
@@ -65,6 +66,23 @@
   background-color: transparent;
   -webkit-tap-highlight-color: transparent;
   z-index: 100000 !important;
+}
+
+.sg-dismiss-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 100000 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  background-image: radial-gradient(var(--gray-1), var(--gray-2));
 }
 
 .sg-underlay-img-wrap {
@@ -145,6 +163,10 @@
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), black 90%);
     content: "";
   }
+}
+
+.sg-dismiss-button {
+  position: absolute;
 }
 
 @media (width > 700px) {
