--- a/client/src/pages/Experiments/SliderGalleryPage/SliderGalleryPage.css
+++ b/client/src/pages/Experiments/SliderGalleryPage/SliderGalleryPage.css
@@ -1,7 +1,21 @@
 .sgp-wrap {
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .sgp-demo-wrap {
+  position: relative;
   width: 100%;
+  background-color: var(--gray-1);
+
+  display: flex;
+  align-items: center;
+  padding: var(--gap-md) 0 var(--gap-md) var(--gap-md);
+  outline: var(--outline);
+  border-radius: var(--gap-xs);
+  flex-direction: column;
+  gap: var(--gap-md);
+  overflow: hidden;
+  margin-bottom: 40px;
 }
